--- a/watch.html
+++ b/watch.html
@@ -137,15 +137,15 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/371244561013471/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/341048434343393/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/371244561013471/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/341048434343393/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/371244561013471/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/341048434343393/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/371244561013471/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/341048434343393/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -153,22 +153,22 @@
         </div>
         <div class="col-md-4">
           <h4>Latest Video</h4>
-          <h5>"I Give Myself Away"</h5>
-          <p>Dated 7/18/21</p>
+          <h5>"The Test Of Rest"</h5>
+          <p>Dated 8/8/21</p>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/1265375023921977/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/536089900929862/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/1265375023921977/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/536089900929862/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/1265375023921977/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/536089900929862/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/1265375023921977/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/536089900929862/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -176,8 +176,8 @@
         </div>
         <div class="col-md-4">
           <h4></h4>
-          <h5>"Putting God First"</h5>
-          <p>Dated 7/11/21</p>
+          <h5>"I Once Was Lost"</h5>
+          <p>Dated 8/1/21</p>
         </div>
       </div>
       <br>
