--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
             <h1 class="display-5 info">Upcoming Events</h1>
             <br>
             <!-- <hr class="my-4"> -->
-            <h3 class="info">COVID-19 Vaccination At Mount Olive Baptist Church</h3>
+            <!-- <h3 class="info">COVID-19 Vaccination At Mount Olive Baptist Church</h3>
             <p><small>
                 Hillsborough County will be providing a mobile vaccination center on <strong>Thursday, May 20th 2021, from 10am -
                 6pm</strong> in the parking lot of the church. This is presented by the Wellness Ministry. NO APPOINTMENT
                 NECESSARY. All are welcome.
               </small></p>
-            <hr class="my-4">
+            <hr class="my-4"> -->
             <h3 class="info">Food Pantry & USDA Food Distribution</h3>
             <p class="lead info" style="text-align: center">
               Mondays - 12:30pm <br>
