--- a/watch.html
+++ b/watch.html
@@ -137,15 +137,15 @@
       </div>
       <div class="row">
         <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/579994267150538/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/1767778010261316/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/579994267150538/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/1767778010261316/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/579994267150538/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/1767778010261316/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/579994267150538/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/1767778010261316/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -153,22 +153,23 @@
         </div>
         <div class="col-md-4">
           <h4>Latest Video</h4>
-          <h5>"Who You Going To Call"</h5>
-          <p>Dated 8/14/22</p>
+          <h5>"Communion With God"</h5>
+          <p>Dated 8/28/22</p>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/5466121770109306/">
+          <!-- don't forget command + shift + L to select all numbers at once  -->
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/634342051252217/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/5466121770109306/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/634342051252217/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/5466121770109306/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/634342051252217/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/5466121770109306/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/634342051252217/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -176,8 +177,8 @@
         </div>
         <div class="col-md-4">
           <h4></h4>
-          <h5>"The Hunger After Righteousness"</h5>
-          <p>Dated 8/07/22</p>
+          <h5>"The Assurance of God"</h5>
+          <p>Dated 8/21/22</p>
         </div>
       </div>
       <br>
