added the latest 2 videos

--- a/watch.html
+++ b/watch.html
@@ -136,16 +136,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8">
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/1767778010261316/">
-
-            Sorry, your browser does not support this video player.
+        <div class="col-md-8">   <!-- don't forget command + shift + L to select all numbers at once  -->
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/1534794183616529/">
+                       Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/1767778010261316/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/1534794183616529/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/1767778010261316/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/1534794183616529/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/1767778010261316/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/1534794183616529/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -153,23 +152,23 @@
         </div>
         <div class="col-md-4">
           <h4>Latest Video</h4>
-          <h5>"Communion With God"</h5>
-          <p>Dated 8/28/22</p>
+          <h5>"A Condition Of The Heart"</h5>
+          <p>Dated 9/11/22</p>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-8">
           <!-- don't forget command + shift + L to select all numbers at once  -->
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/634342051252217/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/795669881875676/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/634342051252217/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/795669881875676/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/634342051252217/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/795669881875676/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/634342051252217/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/795669881875676/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -177,8 +176,8 @@
         </div>
         <div class="col-md-4">
           <h4></h4>
-          <h5>"The Assurance of God"</h5>
-          <p>Dated 8/21/22</p>
+          <h5>"The Reality Of Worship"</h5>
+          <p>Dated 9/5/22</p>
         </div>
       </div>
       <br>
