--- a/watch.html
+++ b/watch.html
@@ -137,14 +137,14 @@
       </div>
       <div class="row">
         <div class="col-md-8">   <!-- don't forget command + shift + L to select all numbers at once  -->
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/1534794183616529/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/1542789379494898/">
                        Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/1534794183616529/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/1542789379494898/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/1534794183616529/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/1542789379494898/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/1534794183616529/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/1542789379494898/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -152,23 +152,23 @@
         </div>
         <div class="col-md-4">
           <h4>Latest Video</h4>
-          <h5>"A Condition Of The Heart"</h5>
-          <p>Dated 9/11/22</p>
+          <h5>"A Servant Called And Obligated"</h5>
+          <p>Dated 10/09/22</p>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-8">
           <!-- don't forget command + shift + L to select all numbers at once  -->
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/795669881875676/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/1107700406797367/">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/795669881875676/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/1107700406797367/"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/795669881875676/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/1107700406797367/"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/795669881875676/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/1107700406797367/"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -176,8 +176,8 @@
         </div>
         <div class="col-md-4">
           <h4></h4>
-          <h5>"The Reality Of Worship"</h5>
-          <p>Dated 9/5/22</p>
+          <h5>"Worship Breaks Down Barriers"</h5>
+          <p>Dated 9/25/22</p>
         </div>
       </div>
       <br>
