--- a/watch.html
+++ b/watch.html
@@ -137,14 +137,14 @@
       </div>
       <div class="row">
         <div class="col-md-8">   <!-- don't forget command + shift + L to select all numbers at once  -->
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/817349409590664/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/881055112905850///">
                        Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/817349409590664/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/881055112905850///"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/817349409590664/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/881055112905850///"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/817349409590664/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/881055112905850///"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -152,23 +152,23 @@
         </div>
         <div class="col-md-4">
           <h4>Latest Video</h4>
-          <h5>"The Highway To Heaven Is Hard...But It's The Only Way"</h5>
-          <p>Dated 10/30/22</p>
+          <h5>"Seek Ye First"</h5>
+          <p>Dated 1/5/23</p>
         </div>
       </div>
       <br>
       <div class="row">
         <div class="col-md-8">
           <!-- don't forget command + shift + L to select all numbers at once  -->
-          <video src="https://www.facebook.com/PCmtolivebaptist/videos/817349409590664/">
+          <video src="https://www.facebook.com/PCmtolivebaptist/videos/881055112905850///">
 
             Sorry, your browser does not support this video player.
           </video>
-          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/817349409590664/"   
+          <div class="fb-video" data-href="https://www.facebook.com/PCmtolivebaptist/videos/881055112905850///"   
             data-width="300" data-show-text="false">
-            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/817349409590664/"
+            <blockquote cite="https://developers.facebook.com/PCmtolivebaptist/videos/881055112905850///"
               class="fb-xfbml-parse-ignore"><a
-                href="https://developers.facebook.com/PCmtolivebaptist/videos/817349409590664/"></a>
+                href="https://developers.facebook.com/PCmtolivebaptist/videos/881055112905850///"></a>
               <p></p>
               <!-- Posted by <a href="https://www.facebook.com/PCmtolivebaptist/">Mt. Olive Baptist Church</a> on Sunday, March 22, 2020</blockquote></div> -->
           </div>
@@ -176,8 +176,8 @@
         </div>
         <div class="col-md-4">
           <h4></h4>
-          <h5>"Do You See These Things?"</h5>
-          <p>Dated 10/23/22</p>
+          <h5>"Let's Go And See"</h5>
+          <p>Dated 12/15/22</p>
         </div>
       </div>
       <br>
